# kb-sieve

./: README.md
kb-sieve/: SKILL.md  pyproject.toml
kb-sieve/scripts/: build_skill.py  check_tokenizer_consistency.py  eval_retrieval.py  expand_llm_variants.py
kb-sieve/scripts/build_skill_lib/: __init__.py  build.py  chunking.py  cli.py  extract.py  kbtool_assets.py  types.py
kb-sieve/scripts/build_skill_lib/db/: __init__.py  crud.py  schema.py
kb-sieve/scripts/build_skill_lib/doc/: __init__.py  references.py
kb-sieve/scripts/build_skill_lib/fingerprint/: __init__.py  utils.py
kb-sieve/scripts/build_skill_lib/incremental/: __init__.py  invalidation.py  state.py
kb-sieve/scripts/build_skill_lib/index/: __init__.py  builder.py  refresh.py
kb-sieve/scripts/build_skill_lib/ir/: __init__.py  identity.py  io.py
kb-sieve/scripts/build_skill_lib/render/: __init__.py  node.py  skill_md.py  skill_md.py.bak
kb-sieve/scripts/build_skill_lib/utils/: contract.py  fs.py  node_io.py  registry.py  safe_sqlite.py  safe_subprocess.py  signals.py  text.py
kb-sieve/templates/kbtool_lib/: artifact_contract.py  canonical_text.py  cli.py  query_engine.py  read_engine.py  runtime.py  safe_sqlite.py  state_contract.py  tokenizer_core.py
skills_example/min-fa-dian/: SKILL.md  build_state.json  corpus_manifest.json  kb.sqlite  kbtool  kbtool.cmd  kbtool.sha1  manifest.json  phase_a_artifact.json
skills_example/min-fa-dian/canonical_text/: doc--current.txt
skills_example/min-fa-dian/runs/: query.md  (+1 more)
tech_report/: references.md  tech_report_en.md  tech_report_zh.md
(+13 files in other folders)
