[project]
name = "pack-builder"
version = "0.1.0"
description = "Build-time tool for generating LLM skill packages from document collections"
requires-python = ">=3.10"
license = {text = "Apache2.0"}
dependencies = [
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
build-skill = "build_skill_lib.cli:main"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["build_skill_lib*"]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end integration tests",
    "requires_external: tests requiring pdftotext/pyinstaller",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/tests/*.py" = ["E402"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
